enhancement(content editor): Fix images overflow in size and improve plugins definitions

--- a/src/components/ContentEditor/styles.css
+++ b/src/components/ContentEditor/styles.css
@@ -1,3 +1,7 @@
 .RichEditor-image {
   text-align: center;
 }
+
+.RichEditor-image img {
+  width: 100%;
+}
